--- a/index.html
+++ b/index.html
@@ -3,62 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Drive File Uploader</title>
+  <title>File Upload</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-  <h1>Upload Files and Text</h1>
-  <form id="upload-form">
-    <label for="file">Choose a file:</label>
-    <input type="file" id="file" name="file" required /><br><br>
+  <div class="container mt-5">
+    <h1>Upload Your Files</h1>
+    <form id="upload-form" enctype="multipart/form-data">
+      <div class="form-group">
+        <label for="file">Upload up to 5 files:</label>
+        <input type="file" id="file" name="files" multiple class="form-control" required>
+        <small class="form-text text-muted">Max 5 files, each up to 5MB. Allowed types: JPEG, PNG, PDF, DOC, DOCX.</small>
+      </div>
 
-    <label for="text">Enter your text:</label><br>
-    <textarea id="text" name="text" rows="4" cols="50" placeholder="Enter some text..."></textarea><br><br>
+      <div class="form-group">
+        <label for="text">Enter your text:</label>
+        <textarea id="text" name="text" rows="4" class="form-control" placeholder="Enter some text..."></textarea>
+      </div>
 
-    <label for="email">Notification Email:</label>
-    <input type="email" id="email" name="email" placeholder="Enter your email" required /><br><br>
-
-    <button type="submit">Upload</button>
-  </form>
-  <p id="response"></p>
+      <button type="submit" class="btn btn-primary">Upload</button>
+    </form>
+    <p id="response" class="mt-3"></p>
+  </div>
 
   <script>
-    document.getElementById('upload-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
+    $(document).ready(function() {
+      $('#upload-form').on('submit', function(e) {
+        e.preventDefault();
 
-      const fileInput = document.getElementById('file');
-      const textInput = document.getElementById('text').value;
-      const emailInput = document.getElementById('email').value;
+        const formData = new FormData(this);
+        const files = $('#file')[0].files;
 
-      const file = fileInput.files[0];
-      if (!file) {
-        alert('Please select a file to upload.');
-        return;
-      }
 
-      const formData = new FormData();
-      formData.append('file', file);
-      formData.append('text', textInput);
-      formData.append('email', emailInput);
-
-      try {
-        const response = await fetch('http://localhost:3000/upload', {
-          method: 'POST',
-          body: formData,
-        });
-
-        const result = await response.json();
-        if (response.ok) {
-          document.getElementById('response').innerText = `Upload successful! Folder: ${result.folderName}`;
-          document.getElementById('response').style.color = 'green';
-        } else {
-          document.getElementById('response').innerText = `Error: ${result.message}`;
-          document.getElementById('response').style.color = 'red';
+        if (files.length > 5) {
+          alert('You can upload a maximum of 5 files.');
+          return;
         }
-      } catch (error) {
-        console.error('Upload error:', error);
-        document.getElementById('response').innerText = 'An unexpected error occurred.';
-        document.getElementById('response').style.color = 'red';
-      }
+
+        for (let i = 0; i < files.length; i++) {
+          if (files[i].size > 5 * 1024 * 1024) {
+            alert(`${files[i].name} exceeds the 5MB size limit.`);
+            return;
+          }
+        }
+
+        $.ajax({
+          url: 'http://localhost:3000/upload',
+          type: 'POST',
+          data: formData,
+          processData: false,
+          contentType: false,
+          success: function(response) {
+            $('#response').text(`Upload successful! Folder: ${response.folderName}`).css('color', 'green');
+          },
+          error: function(xhr) {
+            const errorMessage = xhr.responseJSON ? xhr.responseJSON.message : 'An unexpected error occurred.';
+            $('#response').text(`Error: ${errorMessage}`).css('color', 'red');
+          }
+        });
+      });
     });
   </script>
 </body>
