--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             var folderName = moment().format("YYYY-MM-DDTHH:mm:ss.SSS");
 
             $.ajax({
-                url: 'http://localhost:3000/upload',
+                url: '/upload',
                 type: 'POST',
                 data: formData,
                 processData: false,
