--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                         Be sure to black out any information you don't want shared such as names and addresses before submitting.<br><br>
 
-                        Just click the button below and anonymously upload your files.<br><br>
+                        Just click the button below to anonymously upload your files.<br><br>
 
 
                     <input class="submit-button" type="button" value="Share Your Letters">
@@ -670,7 +670,7 @@
     :root {
         --upload-blue: #4ECDC4;
         --right-bg-color: #F7FFF7;
-        --error-bg-color: #FF6B6B;
+        --error-bg-color: #d95050;/*--#FF6B6B; */
         --dropzone-bg-default: #fafcfd;
         --dropzone-text: #1A535C;
         --dropzone-hover-text: #596375;
